# RP2040-FreeRTOS-Project

./: .gitmodules  CMakeLists.txt  README.md
Ex-Blink/: CMakeLists.txt
FreeRTOS-Config/: FreeRTOSConfig.h
Project/: CMakeLists.txt  main.c  main.h
Project/src/: main.c
